docs/0.14/_sources/api/gammapy.modeling.models.AbsorbedSpectralModel.rst.txt
AbsorbedSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: AbsorbedSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~AbsorbedSpectralModel.absorption
      ~AbsorbedSpectralModel.parameter
      ~AbsorbedSpectralModel.parameter_name
      ~AbsorbedSpectralModel.parameters
      ~AbsorbedSpectralModel.spectral_model
      ~AbsorbedSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~AbsorbedSpectralModel.__call__
      ~AbsorbedSpectralModel.copy
      ~AbsorbedSpectralModel.create
      ~AbsorbedSpectralModel.energy_flux
      ~AbsorbedSpectralModel.energy_flux_error
      ~AbsorbedSpectralModel.evaluate
      ~AbsorbedSpectralModel.evaluate_error
      ~AbsorbedSpectralModel.from_dict
      ~AbsorbedSpectralModel.integral
      ~AbsorbedSpectralModel.integral_error
      ~AbsorbedSpectralModel.inverse
      ~AbsorbedSpectralModel.plot
      ~AbsorbedSpectralModel.plot_error
      ~AbsorbedSpectralModel.spectral_index
      ~AbsorbedSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: absorption
   .. autoattribute:: parameter
   .. autoattribute:: parameter_name
   .. autoattribute:: parameters
   .. autoattribute:: spectral_model
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
