docs/0.17/_sources/api/gammapy.modeling.models.AbsorbedSpectralModel.rst.txt
AbsorbedSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: AbsorbedSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~AbsorbedSpectralModel.alpha_norm
      ~AbsorbedSpectralModel.covariance
      ~AbsorbedSpectralModel.default_parameters
      ~AbsorbedSpectralModel.parameters
      ~AbsorbedSpectralModel.redshift
      ~AbsorbedSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~AbsorbedSpectralModel.__call__
      ~AbsorbedSpectralModel.copy
      ~AbsorbedSpectralModel.create
      ~AbsorbedSpectralModel.energy_flux
      ~AbsorbedSpectralModel.evaluate
      ~AbsorbedSpectralModel.evaluate_error
      ~AbsorbedSpectralModel.from_dict
      ~AbsorbedSpectralModel.from_parameters
      ~AbsorbedSpectralModel.integral
      ~AbsorbedSpectralModel.inverse
      ~AbsorbedSpectralModel.plot
      ~AbsorbedSpectralModel.plot_error
      ~AbsorbedSpectralModel.spectral_index
      ~AbsorbedSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha_norm
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: redshift
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
